# lab_llm

./: .env.example  .gitignore  README.md  pyproject.toml  run.ps1  run.sh  setup.ps1  setup.sh  uninstall.ps1  uninstall.sh
data/: instructions.txt  items.csv  model_pricing.csv  synthetic_rating_results.jsonl  transcripts.csv
data/mood_diaries/: 2026-06-01.txt  2026-06-02.txt  2026-06-03.txt  2026-06-04.txt  2026-06-05.txt  2026-06-06.txt  2026-06-07.txt  2026-06-08.txt
data/transcripts/: transcript_01.txt  transcript_02.txt  transcript_03.txt  transcript_04.txt  transcript_05.txt  transcript_06.txt  transcript_07.txt  transcript_08.txt  transcript_09.txt  transcript_10.txt
examples/01_first_call/: README.md  example.py  nicer_example.py
examples/02_examples_gallery/: README.md  examples_gallery.py
examples/03_tiny_chat_loop/: README.md  example.py  nicer_example.py
examples/04_stateless_conversation/: README.md  example.py
lab_llm/: __init__.py  calls.py  config.py  conversations.py  errors.py  files.py  inputs.py  jobs.py  privacy.py  progress.py  ratings.py  records.py  runs.py  structured.py  tools.py
scripts/: run.ps1  run.sh  setup.ps1  setup.sh  uninstall.ps1  uninstall.sh
tests/: test_calls.py  test_config.py  test_conversations.py  test_files.py  test_inputs.py  test_jobs.py  test_mood_diary_workflow.py  test_privacy.py  test_progress.py  test_rating_citations_example.py  test_rating_example.py  test_research_agent_helpers.py  test_research_agent_tools.py  test_result_checks_example.py  test_scripts.py  test_structured.py  test_tools.py
(+88 files in other folders)
