[project]
name = "lab_llm"
version = "0.1.0"
description = "A small, reusable toolkit for LLM analysis in research labs."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.66.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lab_llm"]
